--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.1"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.0'
+
+    //This will be required to use the Volley Library on SDK 23 and higher
+    useLibrary "org.apache.http.legacy"
 
     defaultConfig {
         applicationId "wolf.de.justtestingsomestuff"
         minSdkVersion 16
-        targetSdkVersion 21
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -25,8 +28,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.0'
-    compile 'com.afollestad:material-dialogs:0.5.1'
+    compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.github.amlcurran.showcaseview:library:5.0.0'
     //compile "org.apache.httpcomponents:httpmime:4.2.3"
     //compile files('httpclient-4.3.6.jar')
