--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:design:25.0.1'
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.github.amlcurran.showcaseview:library:5.0.0'
     //compile "org.apache.httpcomponents:httpmime:4.2.3"
